// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users reducer ignores update for unknown user 1`] = `
Object {
  "entities": Object {
    "test-user-one": Object {
      "access": "admin",
      "is_sso": false,
      "username": "test-user-one",
    },
    "test-user-two": Object {
      "access": "reporting",
      "is_sso": false,
      "username": "test-user-two",
    },
  },
  "error": null,
  "invite": Object {},
  "loading": false,
  "sortKey": "name",
}
`;

exports[`Users reducer removes user from entities 1`] = `
Object {
  "entities": Object {
    "test-user-one": Object {
      "access": "admin",
      "is_sso": false,
      "username": "test-user-one",
    },
  },
  "error": null,
  "invite": Object {},
  "loading": false,
  "sortKey": "name",
}
`;

exports[`Users reducer updates users access level from admin to reporting 1`] = `
Object {
  "entities": Object {
    "test-user-one": Object {
      "access": "reporting",
      "is_sso": undefined,
      "tfa_enabled": undefined,
      "username": "test-user-one",
    },
    "test-user-two": Object {
      "access": "reporting",
      "is_sso": false,
      "username": "test-user-two",
    },
  },
  "error": null,
  "invite": Object {},
  "loading": false,
  "sortKey": "name",
  "updatePending": false,
}
`;

exports[`Users reducer updates users is_sso from false to true 1`] = `
Object {
  "entities": Object {
    "test-user-one": Object {
      "access": undefined,
      "is_sso": true,
      "tfa_enabled": undefined,
      "username": "test-user-one",
    },
    "test-user-two": Object {
      "access": "reporting",
      "is_sso": false,
      "username": "test-user-two",
    },
  },
  "error": null,
  "invite": Object {},
  "loading": false,
  "sortKey": "name",
  "updatePending": false,
}
`;
